// BUNKERVERSE Platform - Rust-QML FFI Bridge Definitions
// CXX-Qt bridge for Control Center Client
// Security-reviewed interface for QML integration

use cxx_qt::prelude::*;
use cxx_qt::{qobject, qproperty, qsignal, qinvokable};
use std::collections::HashMap;

// ============================================================================
// Core Data Types for QML Bridge
// ============================================================================

/// Player identification and basic info
#[derive(Clone, Debug)]
pub struct QmlPlayerProfile {
    pub player_id: String,           // UUID format validated
    pub bunker_tag: String,          // Username, max 32 chars
    pub display_name: String,        // Display name, max 64 chars
    pub email: String,              // Email from OAuth
    pub avatar_url: String,         // Profile picture URL
    pub player_level: u32,          // Calculated from XP
    pub total_xp: u64,              // Total XP earned
    pub account_created_at: i64,    // Unix timestamp
    pub last_active_at: i64,        // Unix timestamp
}

/// Player balances and currencies
#[derive(Clone, Debug)]
pub struct QmlPlayerBalances {
    pub xp: u64,                    // Experience points
    pub ntc_balance: u64,           // NTC balance in wei
    pub credits_balance: u64,       // Fiat credits for MVE purchases
    pub ntc_balance_formatted: String, // Human-readable NTC balance
    pub credits_balance_formatted: String, // Human-readable credits
}

/// Core stats structure for robots and items
#[derive(Clone, Debug)]
pub struct QmlCoreStats {
    // Combat stats
    pub damage: u32,
    pub accuracy: u32, 
    pub critical_chance: u32,
    pub armor_piercing: u32,
    
    // Mobility stats
    pub speed: u32,
    pub agility: u32,
    pub stealth: u32,
    pub evasion: u32,
    
    // Survivability stats
    pub health: u32,
    pub shield: u32,
    
    // Sensors stats
    pub detection: u32,
    pub range: u32,
    
    // Category averages
    pub combat_average: u32,
    pub mobility_average: u32,
    pub survivability_average: u32,
    pub sensors_average: u32,
}

/// Active Bunkerguard robot data
#[derive(Clone, Debug)]
pub struct QmlActiveBunkerguard {
    pub robot_id: String,           // NFT ID of active robot
    pub robot_name: String,         // Custom name given by player
    pub level: u32,                 // Current level (1-100)
    pub current_class: String,      // BunkerClass as string
    pub affiliation: String,        // ClassAffiliation as string
    pub total_xp: u64,              // Total XP for this robot
    pub xp_to_next_level: u64,      // XP needed for next level
    pub base_stats: QmlCoreStats,   // Base stats without equipment
    pub final_stats: QmlCoreStats,  // Final stats with equipment
    pub equipped_items: HashMap<String, String>, // slot -> nft_id
    pub last_used_at: i64,          // Unix timestamp
}

/// NFT details for inventory and marketplace
#[derive(Clone, Debug)]
pub struct QmlNftDetails {
    pub nft_id: String,             // NFT identifier
    pub token_id: u64,              // On-chain token ID
    pub name: String,               // NFT name from metadata
    pub description: String,        // NFT description from metadata
    pub image_url: String,          // NFT image URL
    pub item_type: String,          // ItemType as string
    pub item_rarity: String,        // ItemRarity as string
    pub condition: String,          // ItemCondition as string
    pub base_stats: QmlCoreStats,   // Base stat bonuses
    pub class_affinities: Vec<String>, // Compatible classes
    pub trait_affiliation: String, // ClassAffiliation as string
    pub is_equipped: bool,          // Currently equipped
    pub is_marketable: bool,        // Can be sold
    pub estimated_value: u64,       // Estimated market value in NTC wei
    pub metadata_uri: String,       // IPFS metadata URI
}

/// Market listing information
#[derive(Clone, Debug)]
pub struct QmlMarketListing {
    pub listing_id: String,         // Unique listing identifier
    pub nft_details: QmlNftDetails, // NFT being sold
    pub seller_bunker_tag: String,  // Seller's username
    pub price_ntc: u64,             // Price in NTC wei
    pub price_formatted: String,    // Human-readable price
    pub listing_type: String,       // "SALE" or "AUCTION"
    pub created_at: i64,            // Listing creation timestamp
    pub expires_at: i64,            // Listing expiration timestamp
    pub view_count: u32,            // Number of views
    pub is_favorited: bool,         // Whether current player favorited
}

/// Mission/task information
#[derive(Clone, Debug)]
pub struct QmlMission {
    pub mission_id: String,         // Mission identifier
    pub title: String,              // Mission title
    pub description: String,        // Mission description
    pub mission_type: String,       // "DAILY", "WEEKLY", "STORY", etc.
    pub difficulty: u32,            // Difficulty level 1-10
    pub xp_reward: u64,             // XP reward for completion
    pub ntc_reward: u64,            // NTC reward in wei
    pub nft_rewards: Vec<String>,   // NFT IDs awarded
    pub progress_current: u32,      // Current progress
    pub progress_required: u32,     // Total progress required
    pub is_completed: bool,         // Whether mission is completed
    pub is_claimed: bool,           // Whether rewards have been claimed
    pub expires_at: i64,            // Mission expiration (for daily/weekly)
}

/// Transaction status for L3 operations
#[derive(Clone, Debug)]
pub struct QmlTransactionStatus {
    pub transaction_hash: String,   // L3 transaction hash
    pub status: String,             // "PENDING", "CONFIRMED", "FAILED"
    pub block_number: u64,          // Block number (if confirmed)
    pub gas_used: u64,              // Gas used for transaction
    pub error_message: String,      // Error details if failed
    pub confirmation_timestamp: i64, // Confirmation timestamp
}

/// Error information for user display
#[derive(Clone, Debug)]
pub struct QmlError {
    pub error_code: String,         // Error code for programmatic handling
    pub user_message: String,       // User-friendly error message
    pub technical_details: String,  // Technical details for debugging
    pub trace_id: String,           // Trace ID for support
    pub timestamp: i64,             // Error occurrence timestamp
}

// ============================================================================
// Main Rust Backend QObject
// ============================================================================

/// Main backend interface exposed to QML
/// All CXX-Qt macros define the QML interface
#[qobject]
#[derive(Default)]
pub struct RustBackend {
    // ========================================================================
    // Properties - Exposed to QML as Q_PROPERTY
    // ========================================================================
    
    /// Current player authentication status
    #[qproperty(bool, is_authenticated)]
    is_authenticated: bool,
    
    /// Current player profile data
    #[qproperty(QmlPlayerProfile, player_profile)]
    player_profile: QmlPlayerProfile,
    
    /// Player balances (XP, NTC, Credits)
    #[qproperty(QmlPlayerBalances, player_balances)]
    player_balances: QmlPlayerBalances,
    
    /// Active Bunkerguard robot
    #[qproperty(QmlActiveBunkerguard, active_bunkerguard)]
    active_bunkerguard: QmlActiveBunkerguard,
    
    /// Player's owned NFTs
    #[qproperty(Vec<QmlNftDetails>, owned_nfts)]
    owned_nfts: Vec<QmlNftDetails>,
    
    /// Current marketplace listings
    #[qproperty(Vec<QmlMarketListing>, marketplace_listings)]
    marketplace_listings: Vec<QmlMarketListing>,
    
    /// Player's available missions
    #[qproperty(Vec<QmlMission>, available_missions)]
    available_missions: Vec<QmlMission>,
    
    /// Current UI mode ("MVE" or "ON_CHAIN")
    #[qproperty(String, ui_mode)]
    ui_mode: String,
    
    /// Whether crypto features are enabled (dual-mode support)
    #[qproperty(bool, show_crypto)]
    show_crypto: bool,
    
    /// Connection status to backend services
    #[qproperty(String, connection_status)]
    connection_status: String,
    
    /// Current operation status message
    #[qproperty(String, status_message)]
    status_message: String,
    
    /// Whether any async operation is in progress
    #[qproperty(bool, is_loading)]
    is_loading: bool,
}

impl RustBackend {
    // ========================================================================
    // Signals - Emitted to QML for reactive updates
    // ========================================================================
    
    /// Emitted when player authentication status changes
    #[qsignal]
    fn authentication_changed(&self, is_authenticated: bool);
    
    /// Emitted when player profile data is updated
    #[qsignal]
    fn player_profile_updated(&self, profile: QmlPlayerProfile);
    
    /// Emitted when player balances change
    #[qsignal] 
    fn balances_updated(&self, balances: QmlPlayerBalances);
    
    /// Emitted when active Bunkerguard changes
    #[qsignal]
    fn active_bunkerguard_changed(&self, bunkerguard: QmlActiveBunkerguard);
    
    /// Emitted when player's NFT inventory changes
    #[qsignal]
    fn inventory_updated(&self, nfts: Vec<QmlNftDetails>);
    
    /// Emitted when marketplace listings are refreshed
    #[qsignal]
    fn marketplace_listings_updated(&self, listings: Vec<QmlMarketListing>);
    
    /// Emitted when missions are updated
    #[qsignal] 
    fn missions_updated(&self, missions: Vec<QmlMission>);
    
    /// Emitted when a transaction status changes
    #[qsignal]
    fn transaction_status_changed(&self, tx_status: QmlTransactionStatus);
    
    /// Emitted when an error occurs
    #[qsignal]
    fn error_occurred(&self, error: QmlError);
    
    /// Emitted when connection status changes
    #[qsignal]
    fn connection_status_changed(&self, status: String);
    
    /// Emitted when NAR AI generates a narrative
    #[qsignal]
    fn nar_narrative_generated(&self, narrative: String, context: String);
    
    /// Emitted for real-time notifications
    #[qsignal]
    fn notification_received(&self, title: String, message: String, notification_type: String);
    
    // ========================================================================
    // Invokable Methods - Called from QML
    // ========================================================================
    
    // Authentication & Session Management
    
    /// Initialize zkLogin authentication flow
    #[qinvokable]
    pub fn initiate_zklogin(&mut self, redirect_uri: String) -> String {
        // Returns session ID for tracking the login flow
        // Validates redirect_uri format and security
        todo!("Implement zkLogin initiation with OAuth flow")
    }
    
    /// Complete zkLogin authentication with authorization code
    #[qinvokable]
    pub fn complete_zklogin(&mut self, authorization_code: String, session_id: String) -> bool {
        // Completes OAuth flow and establishes authenticated session
        // Validates authorization code and PKCE parameters
        todo!("Implement zkLogin completion with JWT token handling")
    }
    
    /// Logout current player and clear session
    #[qinvokable]
    pub fn logout(&mut self) -> bool {
        // Revokes tokens and clears all cached data
        // Updates authentication state and emits signals
        todo!("Implement secure logout with token revocation")
    }
    
    /// Refresh authentication token
    #[qinvokable]
    pub fn refresh_authentication(&mut self) -> bool {
        // Refreshes JWT token using refresh token
        // Handles token expiration gracefully
        todo!("Implement token refresh with error handling")
    }
    
    // Player Profile & Account Management
    
    /// Load player profile from backend services
    #[qinvokable]
    pub fn load_player_profile(&mut self) -> bool {
        // Fetches player profile via Account Service gRPC
        // Updates player_profile property and emits signal
        todo!("Implement profile loading with caching")
    }
    
    /// Update player display name
    #[qinvokable]
    pub fn update_display_name(&mut self, new_name: String) -> bool {
        // Validates name length and content
        // Submits update via Account Service gRPC
        todo!("Implement display name update with validation")
    }
    
    /// Update player avatar URL
    #[qinvokable]
    pub fn update_avatar_url(&mut self, avatar_url: String) -> bool {
        // Validates URL format and accessibility
        // Updates profile via Account Service gRPC  
        todo!("Implement avatar update with URL validation")
    }
    
    // Bunkerguard Robot Management
    
    /// Set active Bunkerguard robot
    #[qinvokable]
    pub fn set_active_bunkerguard(&mut self, robot_id: String) -> bool {
        // Validates robot ownership
        // Updates active robot via Account Service gRPC
        todo!("Implement active robot selection with ownership validation")
    }
    
    /// Update Bunkerguard class and affiliation
    #[qinvokable]
    pub fn update_bunkerguard_class(&mut self, robot_id: String, new_class: String, new_affiliation: String) -> bool {
        // Validates class compatibility and requirements
        // May require L3 transaction for permanent change
        todo!("Implement class change with validation and L3 integration")
    }
    
    /// Equip item on active Bunkerguard
    #[qinvokable]
    pub fn equip_item(&mut self, item_nft_id: String, equipment_slot: String) -> bool {
        // Validates item ownership and compatibility
        // Submits equipment change to L3 chain
        todo!("Implement item equipment with L3 transaction")
    }
    
    /// Unequip item from active Bunkerguard
    #[qinvokable]
    pub fn unequip_item(&mut self, equipment_slot: String) -> bool {
        // Removes item from specified slot
        // Submits unequip transaction to L3 chain
        todo!("Implement item unequip with L3 transaction")
    }
    
    // Inventory & NFT Management
    
    /// Refresh player's NFT inventory
    #[qinvokable]
    pub fn refresh_inventory(&mut self) -> bool {
        // Fetches current NFT inventory via Marketplace Service gRPC
        // Updates owned_nfts property and emits signal
        todo!("Implement inventory refresh with caching")
    }
    
    /// Get detailed information about specific NFT
    #[qinvokable]
    pub fn get_nft_details(&mut self, nft_id: String) -> QmlNftDetails {
        // Fetches NFT details including metadata from IPFS
        // Returns detailed NFT information for UI display
        todo!("Implement NFT detail fetching with IPFS metadata resolution")
    }
    
    // Marketplace Operations
    
    /// Load marketplace listings with filters
    #[qinvokable]
    pub fn load_marketplace(&mut self, item_type_filter: String, rarity_filter: String, max_price_ntc: u64) -> bool {
        // Applies filters and fetches marketplace listings
        // Updates marketplace_listings property and emits signal
        todo!("Implement marketplace loading with filtering")
    }
    
    /// Create new marketplace listing
    #[qinvokable]
    pub fn create_listing(&mut self, nft_id: String, price_ntc_wei: u64, duration_hours: u32) -> String {
        // Validates NFT ownership and marketability
        // Submits listing transaction to L3 chain
        // Returns transaction hash for tracking
        todo!("Implement listing creation with L3 transaction")
    }
    
    /// Purchase NFT from marketplace
    #[qinvokable]
    pub fn purchase_nft(&mut self, listing_id: String) -> String {
        // Validates player balance and listing availability
        // Submits purchase transaction to L3 chain
        // Returns transaction hash for tracking
        todo!("Implement NFT purchase with balance validation and L3 transaction")
    }
    
    /// Cancel existing marketplace listing
    #[qinvokable]
    pub fn cancel_listing(&mut self, listing_id: String) -> String {
        // Validates listing ownership
        // Submits cancellation transaction to L3 chain
        // Returns transaction hash for tracking
        todo!("Implement listing cancellation with ownership validation")
    }
    
    // Mission System
    
    /// Load available missions for player
    #[qinvokable]
    pub fn load_missions(&mut self) -> bool {
        // Fetches available missions via Mission Service gRPC
        // Updates available_missions property and emits signal
        todo!("Implement mission loading with progress tracking")
    }
    
    /// Complete mission and claim rewards
    #[qinvokable]
    pub fn complete_mission(&mut self, mission_id: String) -> String {
        // Validates mission completion criteria
        // Submits completion transaction to L3 chain
        // Awards XP, NTC, and NFT rewards
        // Returns transaction hash for tracking
        todo!("Implement mission completion with reward distribution")
    }
    
    // Transaction Monitoring
    
    /// Check status of L3 transaction
    #[qinvokable]
    pub fn check_transaction_status(&mut self, transaction_hash: String) -> QmlTransactionStatus {
        // Queries L3 chain for transaction status
        // Returns current status and details
        todo!("Implement transaction status checking with L3 integration")
    }
    
    /// Get transaction history for player
    #[qinvokable]
    pub fn load_transaction_history(&mut self, page: u32, page_size: u32) -> Vec<QmlTransactionStatus> {
        // Fetches paginated transaction history
        // Returns list of historical transactions
        todo!("Implement transaction history with pagination")
    }
    
    // NAR AI Integration
    
    /// Generate narrative using NAR AI
    #[qinvokable]
    pub fn generate_nar_narrative(&mut self, context: String, prompt_type: String) -> bool {
        // Calls NAR FFI to generate contextual narrative
        // Emits nar_narrative_generated signal when complete
        // Returns true if generation started successfully
        todo!("Implement NAR integration with C FFI")
    }
    
    /// Get AI-generated mission briefing
    #[qinvokable]
    pub fn get_mission_briefing(&mut self, mission_id: String) -> String {
        // Generates personalized mission briefing using NAR
        // Incorporates player stats and robot configuration
        todo!("Implement mission briefing generation")
    }
    
    // Settings & Configuration
    
    /// Toggle UI mode between MVE and On-Chain
    #[qinvokable]
    pub fn toggle_ui_mode(&mut self) -> String {
        // Switches between MVE (show_crypto=false) and On-Chain (show_crypto=true) modes
        // Updates UI properties and emits signals
        // Returns new mode string
        todo!("Implement dual-mode UI toggling")
    }
    
    /// Update player preferences
    #[qinvokable]
    pub fn update_preferences(&mut self, preferences_json: String) -> bool {
        // Updates player preferences in local storage and backend
        // Validates JSON format and content
        todo!("Implement preferences management")
    }
    
    // System Operations
    
    /// Initialize backend connections and load initial data
    #[qinvokable]
    pub fn initialize_backend(&mut self) -> bool {
        // Establishes gRPC connections to backend services
        // Loads initial player data if authenticated
        // Updates connection_status property
        todo!("Implement backend initialization with connection management")
    }
    
    /// Perform health check on backend services
    #[qinvokable]
    pub fn health_check(&mut self) -> String {
        // Checks health of all backend services
        // Returns JSON status report
        todo!("Implement health checking for all services")
    }
    
    /// Force refresh of all cached data
    #[qinvokable]
    pub fn force_refresh(&mut self) -> bool {
        // Clears all caches and reloads data from backend
        // Updates all properties and emits signals
        todo!("Implement comprehensive data refresh")
    }
    
    // Development & Debug Methods (disabled in production)
    
    /// Enable debug logging (development only)
    #[qinvokable]
    pub fn enable_debug_logging(&mut self, enable: bool) -> bool {
        #[cfg(debug_assertions)]
        {
            // Enables detailed logging for development builds only
            todo!("Implement debug logging toggle")
        }
        #[cfg(not(debug_assertions))]
        {
            false // Disabled in release builds
        }
    }
    
    /// Simulate error condition (development only)
    #[qinvokable] 
    pub fn simulate_error(&mut self, error_type: String) -> bool {
        #[cfg(debug_assertions)]
        {
            // Simulates various error conditions for testing
            todo!("Implement error simulation for development")
        }
        #[cfg(not(debug_assertions))]
        {
            false // Disabled in release builds
        }
    }
}

// ============================================================================
// Security Notes and Validation Requirements
// ============================================================================

/*
SECURITY VALIDATION REQUIREMENTS:

1. Input Validation:
   - All string inputs must be validated for length and content
   - UUIDs must match regex: ^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$
   - URLs must be validated and sanitized
   - Numeric inputs must be within reasonable ranges
   - JSON inputs must be parsed and validated

2. Authentication:
   - All operations requiring authentication must verify JWT token
   - Token expiration must be checked before operations
   - Failed authentication must not leak sensitive information

3. Authorization:
   - Players can only modify their own data
   - NFT operations must verify ownership
   - Admin-only operations must check admin privileges

4. Data Sanitization:
   - All user inputs must be sanitized before database storage
   - HTML/script tags must be stripped from text inputs
   - File paths must be validated to prevent directory traversal

5. Error Handling:
   - Never expose internal error details to QML
   - Use trace IDs for error correlation
   - Log security-relevant errors for monitoring

6. Rate Limiting:
   - Transaction submission must be rate limited
   - API calls must respect rate limits from backend services
   - Prevent spam/DOS attacks on expensive operations

7. Memory Safety:
   - All FFI calls must handle memory allocation/deallocation safely
   - String conversions must validate UTF-8 encoding
   - Prevent buffer overflows in C FFI boundary

8. Crypto Integration:
   - Private keys must never be exposed to QML layer
   - Transaction signing must happen in secure context
   - Seed phrases must be protected and never logged
*/